--- a/logs.html
+++ b/logs.html
@@ -20,6 +20,7 @@ body {
 
 }
        
+
 .logo {
   position: fixed;
   margin-left: 68%;
@@ -27,7 +28,6 @@ body {
   margin-top: 43%;
   opacity:65%;
 }   
-
 .topnav {
   background-color: #ffc933;
   overflow: hidden;
@@ -109,14 +109,20 @@ text-shadow: 2px 2px #006eff
     margin: auto;
     text-align: center;
     margin-top: 100px;
-
+    background-color: #f0f0f0;
+    overflow: hidden;
+    width: 43%;
+    min-height:207px;
     
 }
 .para img {
-    margin-top: 100px;
-    scale: 350%;
+    margin-top: 30px;
 }
-
+.para img:hover {
+    margin-top: 30px;
+    scale: 150%;
+    border: 5px solid black;
+}
     </style>
 </head>
 <body>
@@ -126,14 +132,21 @@ text-shadow: 2px 2px #006eff
   
     <div class="topnav">
       <a class="first" href="index.html"><h1><b>SPRING PJSK</b></h1></a>
-<a class="mid" href="logs.html"><h1><b>DUMB LOGS</b></h1></a>
-<a class="mid" href="staff.html"><h1><b>STAFF TEAM</b></h1></a>
-<a class="end" href="https://github.com/Megamer-studios/" target="_blank">Developer</a>
+      <a class="mid" href="logs.html"><h1><b>DUMB LOGS</b></h1></a>
+      <a class="mid" href="staff.html"><h1><b>STAFF TEAM</b></h1></a>
+      <a class="end" href="https://github.com/Megamer-studios/" target="_blank">Developer</a>
       </div>
       <div class="para">
-    <img src="imgs/s3.png">
+        <a href="s1.html"><img src="imgs/s1.png"></a>
       </div>
-
-
+      <div class="para">
+        <a href="s2.html"><img src="imgs/s2.png"></a>
+      </div>
+      <div class="para">
+        <a href="s3.html"><img src="imgs/s3.png"></a>
+      </div>
+      <div class="para">
+        <a href="s4.html"><img src="imgs/s4.png"></a>
+      </div>
 </body>
 </html>
