--- a/staff.html
+++ b/staff.html
@@ -141,6 +141,9 @@ text-shadow: 2px 2px #006eff
    font-family: 'Gotham Black', sans-serif;
     
 }
+.para:hover {
+  scale: 110%;
+}
 .para img {
     margin-top: 30px;
 }
@@ -148,9 +151,7 @@ text-shadow: 2px 2px #006eff
 .para span {
   color: #242424;
 }
-.para:hover {
-  scale: 110%;
-}
+
 .para .paraj {
   font-size: 90pt;
   color: #8abdff;
@@ -179,6 +180,9 @@ text-shadow: 2px 2px #006eff
       </div>
       <div class="para">
         <img src="staff/ss2.png">
+      </div>
+      <div class="para">
+        <img src="staff/mr.jpg" style=" width:390px; ">
       </div>
       <div class="para">
         <h1>Admins</h1>
