--- a/s7.html
+++ b/s7.html
@@ -20,7 +20,6 @@ body {
 
 }
        
-
 .logo {
   position: fixed;
   margin-left: 68%;
@@ -28,6 +27,12 @@ body {
   margin-top: 43%;
   opacity:65%;
 }   
+
+ .topnav {
+  background-color: #ffc933;
+  overflow: hidden;
+  z-index: 1;
+}
 .topnav {
   background-color: #ffc933;
   overflow: hidden;
@@ -109,20 +114,14 @@ text-shadow: 2px 2px #006eff
     margin: auto;
     text-align: center;
     margin-top: 100px;
-    background-color: #f0f0f0;
-    overflow: hidden;
-    width: 43%;
-    min-height:207px;
+
     
 }
 .para img {
-    margin-top: 30px;
+    margin-top: 100px;
+    scale: 350%;
 }
-.para img:hover {
-    margin-top: 30px;
-    scale: 150%;
-    border: 5px solid black;
-}
+
     </style>
 </head>
 <body>
@@ -137,28 +136,9 @@ text-shadow: 2px 2px #006eff
       <a class="end" href="https://github.com/Megamer-studios/" target="_blank">Developer</a>
       </div>
       <div class="para">
-        <a href="s1.html"><img src="imgs/s1.png"></a>
+    <img src="imgs/s7.png">
       </div>
-      <div class="para">
-        <a href="s2.html"><img src="imgs/s2.png"></a>
-      </div>
-      <div class="para">
-        <a href="s3.html"><img src="imgs/s3.png"></a>
-      </div>
-      <div class="para">
-        <a href="s4.html"><img src="imgs/s4.png"></a>
-      </div>
-      <div class="para">
-        <a href="s5.html"><img src="imgs/s5.png"></a>
-      </div>
-      <div class="para">
-        <a href="s6.html"><img src="imgs/s6.png"></a>
-      </div>
-      <div class="para">
-        <a href="s7.html"><img src="imgs/s7.png"></a>
-      </div>
-      <div class="para">
-        <a href="s8.html"><img src="imgs/s8.png"></a>
-      </div>
+
+
 </body>
 </html>
