--- a/staff.html
+++ b/staff.html
@@ -205,5 +205,8 @@ text-shadow: 2px 2px #006eff
       <div class="para">
         <img src="staff/ss4.png">
       </div>
+      <div class="para">
+        <img src="staff/ss7.png">
+      </div>
 </body>
 </html>
