--- a/s1.html
+++ b/s1.html
@@ -128,6 +128,7 @@ text-shadow: 2px 2px #006eff
       <a class="first" href="index.html"><h1><b>SPRING PJSK</b></h1></a>
       <a class="mid" href="logs.html"><h1><b>DUMB LOGS</b></h1></a>
       <a class="mid" href="staff.html"><h1><b>STAFF TEAM</b></h1></a>
+      <a class="mid" href="cast.html"><h1><b>CAST</b></h1></a>
       <a class="end" href="https://github.com/Megamer-studios/" target="_blank">Developer</a>
       </div>
       <div class="para">
