--- a/cast.html
+++ b/cast.html
@@ -245,7 +245,7 @@ text-shadow: 2px 2px #006eff
       </div>
       <div class="para">
         <img src="cast/HinomoriShizuku.webp">
-        <h1>Honomori Shizuku-</h1>
+        <h1>Honomori Shizuku-Roxas</h1>
       </div>
       <div class="para">
         <img src="cast/MomoiAiri.webp">
@@ -257,7 +257,7 @@ text-shadow: 2px 2px #006eff
       </div>
       <div class="para">
         <img src="cast/HanasotoMinori.webp">
-        <h1>Hanasoto Minori-Dina</h1>s
+        <h1>Hanasoto Minori-Dina</h1>
       </div>
 
       
