--- a/cast.html
+++ b/cast.html
@@ -206,7 +206,7 @@ text-shadow: 2px 2px #006eff
           <img src="cast/KagamineRin.webp">
           <h1>Kagamine Rin-Laila</h1>
         </div>
-      <div class="para">
+      <div class="para" >
         <img src="cast/KagamineLen.webp">
         <h1>Kagamine Len-Cem</h1>
       </div>
@@ -267,7 +267,7 @@ text-shadow: 2px 2px #006eff
       </div>
       <div class="para">
         <img src="cast/AoyagiToya.webp">
-        <h1>Ayogi Toya-Wr11sr</h1>
+        <h1>Aoyagi Toya-Wr11sr</h1>
       </div>
       <div class="para">
         <img src="cast/ShinonomeAkito.webp">
