--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@ text-shadow: 2px 2px #006eff
       </div>
       <div class="para">
         <h1>Partnerships</h1>
-        <span>Currently we aren't partnered with anyone. We do plan to in near future.</span>
+        <span>We are partnered with great communities.</span>
+        <a href="https://discord.gg/ygNNUAAWMU" target="_blank"><h1  class="paraj" style="font-size: 32pt;"><b>Wr11speedrun's Korok Lab</b></h1></a>
+        <a href="https://discord.com/invite/CQngtvXfug" target="_blank"><h1  class="paraj" style="font-size: 32pt;"><b>ALYPOO'S HANGOUT</b></h1></a>
       </div>
       <div class="para">
        <a href="https://discord.gg/JSyUbG4SBc" target="_blank"> <h1 class="paraj" >Join</h1></a>
